--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -6,7 +6,7 @@
 
     <title>WomenWhoCode - lesson 3</title>
     <meta name="description" content="The third lesson in the WomenWhoCode series!">
-    <meta name="author" content="Jamie Hollern">
+    <meta name="author" content="Ltisch Pickover">
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
